[gd_scene load_steps=10 format=3 uid="uid://dlwjmuskd1hxi"]

[ext_resource type="Script" uid="uid://bueq7w2y7vrlk" path="res://player.gd" id="1_2hs0m"]
[ext_resource type="Texture2D" uid="uid://bjh7uf7jui824" path="res://art/playerGrey_hold_up.png" id="1_sweqy"]
[ext_resource type="Texture2D" uid="uid://bilod42q74s3s" path="res://art/playerGrey_up1.png" id="2_2hs0m"]
[ext_resource type="Texture2D" uid="uid://8wjawbmsg1l3" path="res://art/playerGrey_up2.png" id="3_1jxqw"]
[ext_resource type="Texture2D" uid="uid://bi2xiohtdjpew" path="res://art/playerGrey_walk1.png" id="4_dw050"]
[ext_resource type="Texture2D" uid="uid://c1xdoda6dve5" path="res://art/playerGrey_walk2.png" id="5_b26j0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_n7ghd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_sweqy")
}],
"loop": true,
"name": &"hold_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2hs0m")
}, {
"duration": 1.0,
"texture": ExtResource("3_1jxqw")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_dw050")
}, {
"duration": 1.0,
"texture": ExtResource("5_b26j0")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nvl01"]
radius = 27.0
height = 68.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2hs0m"]
radius = 32.0

[node name="Player" type="Area2D"]
script = ExtResource("1_2hs0m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_n7ghd")
animation = &"up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_nvl01")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="TargetFinder" type="Area2D" parent="Marker2D"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Marker2D/TargetFinder"]
position = Vector2(28, 0)
shape = SubResource("CircleShape2D_2hs0m")

[node name="ItemHolder" type="Node2D" parent="."]
position = Vector2(0, -50)

[connection signal="area_entered" from="Marker2D/TargetFinder" to="." method="_on_target_finder_area_entered"]
[connection signal="area_exited" from="Marker2D/TargetFinder" to="." method="_on_target_finder_area_exited"]
